# Aerolytica

./: .gitignore  README.md  install.sh  pixi.toml  pyproject.toml
src/aero/: i18n.py
src/aero/adapters/: cds_adapter.py  gefs_adapter.py  gfs_adapter.py  ifs_adapter.py
src/aero/agent/: llm_client.py  loop.py  progress.py  runtime.py  session.py  skills.py  subagent.py  system_prompt.py  vision_client.py
src/aero/cli/: env-requirements.txt  environment.yaml  image_widget.py  init_runtime.py  main.py
src/aero/core/: __init__.py  config.py  debug_log.py  logging.py  network_region.py  types.py
src/aero/data/: cams_availability.py  cams_variables.py  cds_variables.py  ecmwf_params.py  (+16 more)
src/meteora/: i18n.py
templates/project/: aero.yaml  meteora.yaml
tests/: test_agent.py  test_cams.py  test_cams_variables.py  test_cli_images.py  test_cli_llm_setup.py  test_cli_math_rendering.py  test_cli_selection.py  test_config.py  test_dataset_catalog.py  test_debug_log.py  test_era5_adapter.py  test_gfs_adapter.py  test_gfs_availability.py  test_gfs_params.py  test_gfs_products.py  test_gfs_toolbox.py  test_ghcn_daily.py  test_goes.py  test_grib2_inspection.py  test_himawari.py  test_hrrr.py  test_ifs_adapter.py  test_ifs_availability.py  test_init_runtime.py  test_instructions.py  test_isd_parser.py  test_jra3q.py  test_jra55.py  test_literature_arxiv.py  test_literature_pdf.py  test_llm_client.py  test_merra2.py  test_mrms.py  test_ncep_reanalysis.py  test_network_region.py  test_noaa_isd.py  test_project_paths.py  test_runtime.py  test_runtime_manager.py  test_skills.py  (+4 more)
(+161 files in other folders)
