[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aero"
version = "0.1.0"
description = "Aero — 气象科研 AI Agent IDE"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "xarray>=2024.1",
    "netcdf4>=1.7",
    "cdsapi>=0.7",
    "structlog>=24.1",
    "textual>=8.2,<9",
    "textual-image[textual]>=0.13.2,<0.14",
    "pdfplumber>=0.11",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
aero = "aero.cli.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
